--- a/src/app/emp-add-edit/emp-add-edit.component.html
+++ b/src/app/emp-add-edit/emp-add-edit.component.html
@@ -11,6 +11,7 @@
           type="text"
           placeholder="Ex. John"
           formControlName="firstName"
+          required
         />
       </mat-form-field>
       <mat-form-field appearance="outline">
@@ -20,6 +21,7 @@
           type="text"
           placeholder="Ex. Doe"
           formControlName="lastName"
+          required
         />
       </mat-form-field>
     </div>
@@ -31,11 +33,17 @@
           type="email"
           placeholder="Ex. test@gmail.com"
           formControlName="email"
+          required
         />
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Date of Birth</mat-label>
-        <input matInput [matDatepicker]="picker" formControlName="dob" />
+        <input
+          matInput
+          [matDatepicker]="picker"
+          formControlName="dob"
+          required
+        />
         <mat-hint>MM/DD/YYYY</mat-hint>
         <mat-datepicker-toggle
           matIconSuffix
@@ -45,7 +53,11 @@
       </mat-form-field>
     </div>
     <div class="row">
-      <mat-radio-group aria-label="Select an option" formControlName="gender">
+      <mat-radio-group
+        aria-label="Select an option"
+        formControlName="gender"
+        required
+      >
         <mat-label><b>Gender</b></mat-label>
         <mat-radio-button value="male">Male</mat-radio-button>
         <mat-radio-button value="female">Female</mat-radio-button>
@@ -54,7 +66,7 @@
     <div class="row">
       <mat-form-field appearance="outline">
         <mat-label>Education</mat-label>
-        <mat-select formControlName="education">
+        <mat-select formControlName="education" required>
           <mat-option *ngFor="let val of education" [value]="val">
             {{ val }}
           </mat-option>
@@ -67,6 +79,7 @@
           type="text"
           placeholder="Ex. Co-well"
           formControlName="company"
+          required
         />
       </mat-form-field>
     </div>
@@ -78,6 +91,7 @@
           type="number"
           placeholder="Ex. 3"
           formControlName="experience"
+          required
         />
       </mat-form-field>
       <mat-form-field appearance="outline">
@@ -87,6 +101,7 @@
           type="number"
           placeholder="Ex. 300000"
           formControlName="salary"
+          required
         />
         <mat-hint>円</mat-hint>
       </mat-form-field>
